docs/AWS_Deployment/5_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SmartFoodDelivery   # same with Service selector
  template:
    metadata:
      labels:
        app: SmartFoodDelivery  
    spec:
      containers:
        - name: SmartFoodDelivery
          image: 123456789012.dkr.ecr.us-east-2.amazonaws.com/my-springboot:latest
          ports:
            - containerPort: 8080
