docs/AWS_Deployment/psql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql-client
spec:
  containers:
    - name: psql
      image: bitnami/postgresql:latest
      command: ["sleep", "3600"]
