docs/AWS_Deployment/5_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartfooddelivery-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: SmartFoodDelivery
