docs/AWS_Deployment/6_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartfooddelivery-backend-ingress
  namespace: default
  annotations:
    
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:087092906482:certificate/90d20294-405f-4945-9726-d72c4e413908
    
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=120
    
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '200,301'
    # WAF, Web ACL(optional)
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-2:...
spec:
  ingressClassName: alb
  rules:
    - host: api.smartfooddeliveries.com   # optional, self-defined hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smartfooddelivery-service    # Service Name
                port:
                  number: 8080
  tls:
    - hosts:
        - api.smartfooddeliveries.com
      secretName: unused-tls-secret
